--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
+    margin-top: 10;
     padding: 0;
     display: flex;
     flex-direction: column;
@@ -11,12 +11,7 @@ body {
 }
 
 #player {
-    width: 640px; /* Standard width */
-    height: 360px; /* Standard height */
-    max-width: 100%;
-    max-height: 100%;
-    border-radius: 15px;
-    margin-top: 20px; /* Add margin to move the player up */
+    display: flex;
 }
 
 .card-slider {
