--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,14 @@ body {
     background-color: #000;
 }
 
+#current-channel {
+    background-color: #88eae8;
+    color: #fff;
+    padding: 2px;
+    text-align: center;
+    border-radius: 0 0 10px 10px;
+}
+
 #epg-container {
     flex: 1;
     width: 300px; /* Set a fixed width */
