--- a/styles.css
+++ b/styles.css
@@ -183,4 +183,9 @@ body {
     .card-slider {
         width: 100%;
     }
+
+    .current-epg {
+        background-color: #d3f8d3;
+        border-left: 5px solid #4caf50;
+    }
 }
