--- a/styles.css
+++ b/styles.css
@@ -81,17 +81,41 @@ body {
     color: #888;
 }
 
+.card-slider-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 1200px;
+    margin: 10px auto;
+}
+
+.card-slider-header {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.card-slider-title {
+    font-weight: bold;
+    font-size: 1.5em;
+    margin-right: auto;
+}
+
+.card-slider-container {
+    position: relative;
+    width: 100%;
+}
+
 .card-slider {
     display: flex;
     overflow-x: auto;
     overflow-y: hidden; /* Prevent vertical scrolling */
     scroll-snap-type: x mandatory;
     -webkit-overflow-scrolling: touch;
-    position: relative;
     width: 100%;
     height: 10%;
-    max-width: 1200px;
-    margin: 10px auto;
     min-height: 150px; /* Minimum height to show loading animation */
 }
 
@@ -127,6 +151,16 @@ body {
 .card-content {
     padding: 10px;
     text-align: center;
+}
+
+.fade-effect {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 30px;
+    height: 100%;
+    background: linear-gradient(to left, rgba(240, 240, 240, 1), rgba(240, 240, 240, 0));
+    pointer-events: none; /* Allow interactions through the fade effect */
 }
 
 #spinner {
@@ -180,7 +214,7 @@ body {
         height: 400px; /* Adjust height for mobile */
     }
 
-    .card-slider {
+    .card-slider-wrapper {
         width: 100%;
     }
 
