--- a/styles.css
+++ b/styles.css
@@ -105,9 +105,6 @@ body {
     margin-top: 5px;
 }
 
-
-
-
 .card-slider-wrapper {
     display: flex;
     flex-direction: column;
@@ -247,24 +244,24 @@ body {
         width: 100%;
         margin-right: 0;
         margin-bottom: 20px;
-        }
-#now-playing {
-    font-size: 10px;
-    padding: 3px;
-    width: 100%;
-}
+    }
 
-#epg-container {
-    width: 100%;
-    height: 400px; /* Adjust height for mobile */
-}
+    #epg-wrapper {
+        display: none; /* Hide the EPG on mobile */
+    }
 
-.card-slider-wrapper {
-    width: 100%;
-}
+    .card-slider-wrapper {
+        width: 100%;
+    }
 
-.current-epg {
-    background-color: #d3f8d3;
-    border-left: 5px solid #4caf50;
-}
+    #now-playing {
+        font-size: 10px;
+        padding: 3px;
+        width: 100%;
+    }
+
+    .current-epg {
+        background-color: #d3f8d3;
+        border-left: 5px solid #4caf50;
+    }
 }
