--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,8 @@ body {
     font-weight: bold;
     font-size: 1.5em;
     margin-right: auto;
+    color: #ffffff;
+
 }
 
 .card-slider-container {
@@ -214,7 +216,7 @@ body {
     top: 0;
     width: 30px;
     height: 100%;
-    background: linear-gradient(to left, rgba(240, 240, 240, 1), rgba(240, 240, 240, 0));
+    /*background: linear-gradient(to left, rgba(240, 240, 240, 1), rgba(240, 240, 240, 0));*/
     pointer-events: none;
 }
 
