--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, Arial, sans-serif;
     margin: 0;
     padding: 20px;
     display: flex;
@@ -9,11 +9,8 @@ body {
     min-height: 100vh;
     background-color: #f0f0f0;
     box-sizing: border-box;
-
-    margin: auto;
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     overflow: auto;
-    background: linear-gradient(315deg, rgba(101,0,94,1) 3%, rgba(60,132,206,1) 38%, rgba(48,238,226,1) 68%, rgba(255,25,25,1) 98%);
+    background: linear-gradient(315deg, rgba(101, 0, 94, 1) 3%, rgba(60, 132, 206, 1) 38%, rgba(48, 238, 226, 1) 68%, rgba(255, 25, 25, 1) 98%);
     animation: gradient 15s ease infinite;
     background-size: 400% 400%;
     background-attachment: fixed;
@@ -27,7 +24,7 @@ body {
 
 #main-container {
     display: flex;
-    flex-direction: column; /* Stack items in a column by default */
+    flex-direction: column;
     align-items: center;
     width: 90%;
     max-width: 1200px;
@@ -43,7 +40,7 @@ body {
     top: -10px;
     box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2);
     width: 100%;
-    margin-bottom: 20px; /* Add margin to separate from EPG */
+    margin-bottom: 20px;
 }
 
 #player {
@@ -59,7 +56,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: auto;
+    width: 100%;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -140,7 +137,6 @@ body {
     font-size: 1.5em;
     margin-right: auto;
     color: #ffffff;
-
 }
 
 .card-slider-container {
@@ -247,22 +243,21 @@ body {
     100% { transform: rotate(360deg); }
 }
 
-/* Media queries for responsiveness */
 @media (min-width: 769px) {
     #main-container {
-        flex-direction: row; /* Side by side on larger screens */
+        flex-direction: row;
     }
 
     #player-container {
         flex: 4;
         margin-right: 20px;
-        margin-bottom: 0; /* Remove bottom margin when side by side */
+        margin-bottom: 0;
     }
 
     #epg-wrapper {
         flex: 1;
-        width: auto; /* Reset width to auto for side by side */
-        margin-left: 0; /* Remove left margin */
+        width: auto;
+        margin-left: 0;
     }
 }
 
@@ -284,11 +279,10 @@ body {
     #epg-wrapper {
         width: 100%;
         margin-left: 0;
-        display: flex; /* Ensure EPG is displayed below player */
+        display: flex;
     }
 }
 
-/* Media query to hide EPG container on very small screens */
 @media (max-width: 480px) {
     #epg-wrapper {
         display: none;
@@ -334,38 +328,37 @@ body {
 }
 
 @keyframes wave {
-    2% {
-        transform: translateX(1);
-    }
+2% {
+transform: translateX(1);
+}
+25% {
+    transform: translateX(-25%);
+}
 
-    25% {
-        transform: translateX(-25%);
-    }
+50% {
+    transform: translateX(-50%);
+}
 
-    50% {
-        transform: translateX(-50%);
-    }
+75% {
+    transform: translateX(-25%);
+}
 
-    75% {
-        transform: translateX(-25%);
-    }
-
-    100% {
-        transform: translateX(1);
-    }
+100% {
+    transform: translateX(1);
+}
 }
 
 .epg-tooltip {
-    position: absolute;
-    bottom: 50px; /* Adjust the position as needed */
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: rgba(0, 0, 0, 0.7);
-    color: #fff;
-    padding: 10px;
-    border-radius: 5px;
-    display: none;
-    z-index: 1000;
-    pointer-events: none;
-    white-space: nowrap;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+background-color: rgba(0, 0, 0, 0.7);
+color: #fff;
+padding: 10px;
+border-radius: 5px;
+display: none;
+z-index: 1000;
+pointer-events: none;
+white-space: nowrap;
 }
